# sili-telegram-bot

./: .env.example  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  accounts_file.json.example  dota_api.py  example_config.json  heroes.json  punlines.json  pyproject.toml  requirements.txt
.github/workflows/: CI.yaml  codeql-analysis.yml  deployer.yml
config/: default.json
matchdata/: accounts_file.json.example
resources/: heroes.json  lets_dota.mpeg  punlines.json  whitelist.json
resources/static/: punlines.json
scripts/: scrape_voiceline_urls.py
src/: bot.py  challenge.py  dota_api.py  socket_client.py  socket_server.py
src/models/: birthday.py  birthdays.py  challenge.py  helper.py  match.py  matches.py  matchresult.py  message.py  patch_checker.py  playerinfo.py  voiceline.py
src/modules/: voiceline_scraping.py
src/repositories/: env_variables.py  punlines.py
src/sili_telegram_bot/: bot.py  dota_api.py
src/sili_telegram_bot/models/: birthday.py  birthdays.py  exceptions.py  inline_whitelist.py  match.py  matches.py  matchresult.py  message.py  patch_checker.py  playerinfo.py  responses.py  voiceline.py
src/sili_telegram_bot/modules/: config.py  mediawiki_api.py  response_types.py  voiceline_inline.py  voiceline_scraping.py
src/telegram_service/: telegram_administration.py  telegram_functions.py  telegram_handler.py  telegram_jobs.py
tests/: conftest.py  test_dummy.py  test_scrape_voiceline_urls.py  test_scrape_voiceline_urls_cases.py  test_voiceline.py  test_voiceline_cases.py
tests/models/: test_responses.py  test_responses_cases.py  test_voiceline.py  test_voiceline_cases.py
tests/modules/: test_scrape_voiceline_urls.py  test_scrape_voiceline_urls_cases.py
tests/test_data/: entity_data.json  responses.json
tests/test_infrastructure/: common_case_infra.py  generate_test_data.py
