[project]
name = "sili-telegram-bot"
version = "0.0.1"
description = """
A telegram bot that evaluates DOTA2 matches of people and notifies about their
results.
"""
readme = "README.md"
requires-python = ">=3.10.2"
license = { file = "./LICENCE" }
authors = [{ name = "Eixix", email = "tobiasbetz@hotmail.de" }]

dependencies = [
    "APScheduler<=3.10",
    "beautifulsoup4<=4.11",
    "numpy<=1.22",
    "pymediawiki<=0.7",
    "python-telegram-bot[job-queue]<=21.5",
    "regex<=2022.4",
    "requests<=2.32.2",
    # Not directly used, pinned for security reasons.
    "certifi==2024.7.4",
    "urllib3==2.2.2",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["black", "pytest-cases<=3.8.5", "pytest<=8.3"]

[project.scripts]
run_bot = "sili_telegram_bot.bot:main"
get_response_data = "sili_telegram_bot.modules.voiceline_scraping:get_response_data"

[tool.pytest.ini_options]
pythonpath = "tests/"
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
